# open-smart-lock

./: .clang-format  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PORTING.md  README.md  VERSION  mkdocs.yml
.github/workflows/: build.yml  docs.yml  pages.yml  tests.yml
docs/: getting-started.md  index.md  power-budget.md  requirements.txt  security-model.md
docs/architecture/: memory-model.md  overview.md
docs/design/: hal-refactor.md
docs/guides/: power-budget.md  security-model.md
docs/operations/: ota.md
docs/reference/: build-profiles.md  hal.md  partitions.md
examples/nanoBoard-servo-retrofit/: README.md
firmware/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  pm_static_nanoBoard_release_ota.yml  prj.conf  prj_radioed.conf  prj_release.conf  prj_release_ota.conf  sample.yaml  sysbuild_release_ota.conf  west.yml
firmware/app/: README.md  adc_manager.cpp  adc_manager.h  chip_project_config.h  main.cpp  runtime.cpp  runtime.h  servo_controller.cpp  servo_controller.h
firmware/app/access/: credentials.cpp  roster.cpp  roster.h  schedules.cpp  types.cpp  types.h  users.cpp  vault.cpp  vault.h
firmware/app/hal/: actuator.h  feedback.h  power.h  transport_switch.h
firmware/app/lock/: bolt.cpp  bolt.h  pin.cpp
firmware/app/matter/: zcl_callbacks.cpp
firmware/app/transport/: radio.cpp  radio.h
firmware/app/ui/: console.cpp  console.h  console_constants.h
firmware/app/zap/: README.md  door_lock.zap
firmware/boards/: nanoBoard.conf  nanoBoard.overlay
firmware/drivers/actuator/servo_pwm/: CMakeLists.txt  Kconfig  servo_pwm_driver.cpp  servo_pwm_driver.h
firmware/drivers/feedback/adc_potentiometer/: CMakeLists.txt  Kconfig  adc_potentiometer_driver.cpp  adc_potentiometer_driver.h
firmware/drivers/power/gpio_gate/: CMakeLists.txt  Kconfig  gpio_gate_driver.cpp  gpio_gate_driver.h
firmware/dts/bindings/: actuator-servo-pwm.yaml
firmware/snippets/schedules/: README.md  schedules.conf  snippet.yml
firmware/sysbuild/mcuboot/: prj.conf
firmware/sysbuild/mcuboot/boards/: nanoBoard.overlay
scripts/: build_debug.sh  build_release.sh  find_dev_id.sh  flash_debug.sh  run_tests.sh  serial_dump.sh
tests/: README.md
tests/host/: CMakeLists.txt  test_bolt.cpp  test_main.cpp  test_roster.cpp
tests/host/zephyr_shim/zephyr/logging/: log.h
tests/unit/: CMakeLists.txt  prj.conf  test_bolt.cpp  test_roster.cpp  testcase.yaml
tests/unit/mocks/: mock_actuator.h  mock_feedback.h
